src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    APOSTROPHE
    ARROW
    AT
    BACKSLASH
    BREAK
    DIVIDEASSIGN
    DOT
    DOUBLEQUOTE
    HASH
    INPUT
    MINUSASSIGN
    MODASSIGN
    NEW
    NULL
    PARAMS
    PIPE
    PLUSASSIGN
    SLASH
    TIMESASSIGN

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt stmt_list
Rule 3     stmt_list -> stmt
Rule 4     stmt_list -> empty
Rule 5     stmt -> class_declaration
Rule 6     stmt -> fun_declaration
Rule 7     stmt -> import_declaration
Rule 8     stmt -> assignment
Rule 9     stmt -> variable_declaration
Rule 10    stmt -> print_stmt
Rule 11    stmt -> control_structure
Rule 12    stmt -> return_stmt
Rule 13    stmt -> function_call
Rule 14    stmt -> empty
Rule 15    class_declaration -> CLASS identifier LBRACE stmt_list RBRACE
Rule 16    fun_declaration -> FUN identifier LPAREN params RPAREN LBRACE stmt_list RBRACE
Rule 17    params -> general_type identifier COMMA params
Rule 18    params -> general_type identifier
Rule 19    params -> empty
Rule 20    import_declaration -> IMPORT STRING_LITERAL
Rule 21    variable_declaration -> general_type identifier SEMICOLON
Rule 22    variable_declaration -> list_type identifier LBRACKET RBRACKET SEMICOLON
Rule 23    variable_declaration -> array_type identifier LBRACE RBRACE SEMICOLON
Rule 24    assignment -> general_type identifier ASSIGN expression SEMICOLON
Rule 25    assignment -> list_type identifier LBRACKET digit RBRACKET ASSIGN expression SEMICOLON
Rule 26    assignment -> list_type identifier ASSIGN LBRACKET expression RBRACKET SEMICOLON
Rule 27    assignment -> array_type identifier LBRACE digit RBRACE ASSIGN expression SEMICOLON
Rule 28    assignment -> array_type identifier ASSIGN LBRACE expression RBRACE SEMICOLON
Rule 29    assignment -> identifier ASSIGN expression SEMICOLON
Rule 30    print_stmt -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 31    control_structure -> if_stmt
Rule 32    control_structure -> for_stmt
Rule 33    control_structure -> while_stmt
Rule 34    control_structure -> switch_stmt
Rule 35    function_call -> identifier LPAREN arg_list RPAREN SEMICOLON
Rule 36    arg_list -> expression COMMA arg_list
Rule 37    arg_list -> expression
Rule 38    return_stmt -> RETURN expression SEMICOLON
Rule 39    if_stmt -> IF LPAREN expression RPAREN LBRACE stmt_list RBRACE
Rule 40    if_stmt -> IF LPAREN expression RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
Rule 41    if_stmt -> expression QUESTION expression COLON expression SEMICOLON
Rule 42    for_stmt -> FOR LPAREN assignment SEMICOLON expression SEMICOLON expression RPAREN LBRACE stmt_list RBRACE
Rule 43    while_stmt -> WHILE LPAREN expression RPAREN LBRACE stmt_list RBRACE
Rule 44    switch_stmt -> SWITCH LPAREN expression RPAREN LBRACE case_stmts default_stmt RBRACE
Rule 45    case_stmts -> CASE expression COLON stmt_list case_stmts
Rule 46    case_stmts -> empty
Rule 47    default_stmt -> DEFAULT COLON stmt_list
Rule 48    default_stmt -> empty
Rule 49    expression -> expression PLUS expression
Rule 50    expression -> expression MINUS expression
Rule 51    expression -> expression MULTIPLY expression
Rule 52    expression -> expression DIVIDE expression
Rule 53    expression -> expression MODULUS expression
Rule 54    expression -> expression AND expression
Rule 55    expression -> expression OR expression
Rule 56    expression -> expression EQUAL expression
Rule 57    expression -> expression NOTEQUAL expression
Rule 58    expression -> expression LESSTHAN expression
Rule 59    expression -> expression GREATERTHAN expression
Rule 60    expression -> expression LESSTHANEQUAL expression
Rule 61    expression -> expression GREATERTHANEQUAL expression
Rule 62    expression -> expression INCREMENT
Rule 63    expression -> expression DECREMENT
Rule 64    expression -> expression COMMA expression
Rule 65    expression -> expression POW expression
Rule 66    expression -> NOT expression
Rule 67    expression -> LPAREN expression RPAREN
Rule 68    expression -> identifier
Rule 69    expression -> digit
Rule 70    expression -> string
Rule 71    expression -> boolean
Rule 72    expression -> identifier LBRACKET expression RBRACKET
Rule 73    expression -> identifier LBRACE expression RBRACE
Rule 74    digit -> NUMBER
Rule 75    boolean -> TRUE
Rule 76    boolean -> FALSE
Rule 77    general_type -> INT
Rule 78    general_type -> FLOAT
Rule 79    general_type -> DOUBLE
Rule 80    general_type -> STRING
Rule 81    general_type -> BOOLEAN
Rule 82    general_type -> identifier
Rule 83    array_type -> INTARRAY
Rule 84    array_type -> FLOATARRAY
Rule 85    array_type -> STRINGARRAY
Rule 86    array_type -> DOUBLEARRAY
Rule 87    list_type -> INTLIST
Rule 88    list_type -> FLOATLIST
Rule 89    list_type -> STRINGLIST
Rule 90    list_type -> DOUBLELIST
Rule 91    identifier -> IDENTIFIER
Rule 92    string -> STRING_LITERAL
Rule 93    empty -> <empty>

Terminals, with rules where they appear

AND                  : 54
APOSTROPHE           : 
ARROW                : 
ASSIGN               : 24 25 26 27 28 29
AT                   : 
BACKSLASH            : 
BOOLEAN              : 81
BREAK                : 
CASE                 : 45
CLASS                : 15
COLON                : 41 45 47
COMMA                : 17 36 64
DECREMENT            : 63
DEFAULT              : 47
DIVIDE               : 52
DIVIDEASSIGN         : 
DOT                  : 
DOUBLE               : 79
DOUBLEARRAY          : 86
DOUBLELIST           : 90
DOUBLEQUOTE          : 
ELSE                 : 40
EQUAL                : 56
FALSE                : 76
FLOAT                : 78
FLOATARRAY           : 84
FLOATLIST            : 88
FOR                  : 42
FUN                  : 16
GREATERTHAN          : 59
GREATERTHANEQUAL     : 61
HASH                 : 
IDENTIFIER           : 91
IF                   : 39 40
IMPORT               : 20
INCREMENT            : 62
INPUT                : 
INT                  : 77
INTARRAY             : 83
INTLIST              : 87
LBRACE               : 15 16 23 27 28 39 40 40 42 43 44 73
LBRACKET             : 22 25 26 72
LESSTHAN             : 58
LESSTHANEQUAL        : 60
LPAREN               : 16 30 35 39 40 42 43 44 67
MINUS                : 50
MINUSASSIGN          : 
MODASSIGN            : 
MODULUS              : 53
MULTIPLY             : 51
NEW                  : 
NOT                  : 66
NOTEQUAL             : 57
NULL                 : 
NUMBER               : 74
OR                   : 55
PARAMS               : 
PIPE                 : 
PLUS                 : 49
PLUSASSIGN           : 
POW                  : 65
PRINT                : 30
QUESTION             : 41
RBRACE               : 15 16 23 27 28 39 40 40 42 43 44 73
RBRACKET             : 22 25 26 72
RETURN               : 38
RPAREN               : 16 30 35 39 40 42 43 44 67
SEMICOLON            : 21 22 23 24 25 26 27 28 29 30 35 38 41 42 42
SLASH                : 
STRING               : 80
STRINGARRAY          : 85
STRINGLIST           : 89
STRING_LITERAL       : 20 92
SWITCH               : 44
TIMESASSIGN          : 
TRUE                 : 75
WHILE                : 43
error                : 

Nonterminals, with rules where they appear

arg_list             : 35 36
array_type           : 23 27 28
assignment           : 8 42
boolean              : 71
case_stmts           : 44 45
class_declaration    : 5
control_structure    : 11
default_stmt         : 44
digit                : 25 27 69
empty                : 4 14 19 46 48
expression           : 24 25 26 27 28 29 30 36 37 38 39 40 41 41 41 42 42 43 44 45 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 63 64 64 65 65 66 67 72 73
for_stmt             : 32
fun_declaration      : 6
function_call        : 13
general_type         : 17 18 21 24
identifier           : 15 16 17 18 21 22 23 24 25 26 27 28 29 35 68 72 73 82
if_stmt              : 31
import_declaration   : 7
list_type            : 22 25 26
params               : 16 17
print_stmt           : 10
program              : 0
return_stmt          : 12
stmt                 : 2 3
stmt_list            : 1 2 15 16 39 40 40 42 43 45 47
string               : 70
switch_stmt          : 34
variable_declaration : 9
while_stmt           : 33

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt stmt_list
    (3) stmt_list -> . stmt
    (4) stmt_list -> . empty
    (5) stmt -> . class_declaration
    (6) stmt -> . fun_declaration
    (7) stmt -> . import_declaration
    (8) stmt -> . assignment
    (9) stmt -> . variable_declaration
    (10) stmt -> . print_stmt
    (11) stmt -> . control_structure
    (12) stmt -> . return_stmt
    (13) stmt -> . function_call
    (14) stmt -> . empty
    (93) empty -> .
    (15) class_declaration -> . CLASS identifier LBRACE stmt_list RBRACE
    (16) fun_declaration -> . FUN identifier LPAREN params RPAREN LBRACE stmt_list RBRACE
    (20) import_declaration -> . IMPORT STRING_LITERAL
    (24) assignment -> . general_type identifier ASSIGN expression SEMICOLON
    (25) assignment -> . list_type identifier LBRACKET digit RBRACKET ASSIGN expression SEMICOLON
    (26) assignment -> . list_type identifier ASSIGN LBRACKET expression RBRACKET SEMICOLON
    (27) assignment -> . array_type identifier LBRACE digit RBRACE ASSIGN expression SEMICOLON
    (28) assignment -> . array_type identifier ASSIGN LBRACE expression RBRACE SEMICOLON
    (29) assignment -> . identifier ASSIGN expression SEMICOLON
    (21) variable_declaration -> . general_type identifier SEMICOLON
    (22) variable_declaration -> . list_type identifier LBRACKET RBRACKET SEMICOLON
    (23) variable_declaration -> . array_type identifier LBRACE RBRACE SEMICOLON
    (30) print_stmt -> . PRINT LPAREN expression RPAREN SEMICOLON
    (31) control_structure -> . if_stmt
    (32) control_structure -> . for_stmt
    (33) control_structure -> . while_stmt
    (34) control_structure -> . switch_stmt
    (38) return_stmt -> . RETURN expression SEMICOLON
    (35) function_call -> . identifier LPAREN arg_list RPAREN SEMICOLON
    (77) general_type -> . INT
    (78) general_type -> . FLOAT
    (79) general_type -> . DOUBLE
    (80) general_type -> . STRING
    (81) general_type -> . BOOLEAN
    (82) general_type -> . identifier
    (87) list_type -> . INTLIST
    (88) list_type -> . FLOATLIST
    (89) list_type -> . STRINGLIST
    (90) list_type -> . DOUBLELIST
    (83) array_type -> . INTARRAY
    (84) array_type -> . FLOATARRAY
    (85) array_type -> . STRINGARRAY
    (86) array_type -> . DOUBLEARRAY
    (91) identifier -> . IDENTIFIER
    (39) if_stmt -> . IF LPAREN expression RPAREN LBRACE stmt_list RBRACE
    (40) if_stmt -> . IF LPAREN expression RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
    (41) if_stmt -> . expression QUESTION expression COLON expression SEMICOLON
    (42) for_stmt -> . FOR LPAREN assignment SEMICOLON expression SEMICOLON expression RPAREN LBRACE stmt_list RBRACE
    (43) while_stmt -> . WHILE LPAREN expression RPAREN LBRACE stmt_list RBRACE
    (44) switch_stmt -> . SWITCH LPAREN expression RPAREN LBRACE case_stmts default_stmt RBRACE
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression MULTIPLY expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . expression MODULUS expression
    (54) expression -> . expression AND expression
    (55) expression -> . expression OR expression
    (56) expression -> . expression EQUAL expression
    (57) expression -> . expression NOTEQUAL expression
    (58) expression -> . expression LESSTHAN expression
    (59) expression -> . expression GREATERTHAN expression
    (60) expression -> . expression LESSTHANEQUAL expression
    (61) expression -> . expression GREATERTHANEQUAL expression
    (62) expression -> . expression INCREMENT
    (63) expression -> . expression DECREMENT
    (64) expression -> . expression COMMA expression
    (65) expression -> . expression POW expression
    (66) expression -> . NOT expression
    (67) expression -> . LPAREN expression RPAREN
    (68) expression -> . identifier
    (69) expression -> . digit
    (70) expression -> . string
    (71) expression -> . boolean
    (72) expression -> . identifier LBRACKET expression RBRACKET
    (73) expression -> . identifier LBRACE expression RBRACE
    (74) digit -> . NUMBER
    (92) string -> . STRING_LITERAL
    (75) boolean -> . TRUE
    (76) boolean -> . FALSE

  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for FUN resolved as shift
  ! shift/reduce conflict for IMPORT resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for INTLIST resolved as shift
  ! shift/reduce conflict for FLOATLIST resolved as shift
  ! shift/reduce conflict for STRINGLIST resolved as shift
  ! shift/reduce conflict for DOUBLELIST resolved as shift
  ! shift/reduce conflict for INTARRAY resolved as shift
  ! shift/reduce conflict for FLOATARRAY resolved as shift
  ! shift/reduce conflict for STRINGARRAY resolved as shift
  ! shift/reduce conflict for DOUBLEARRAY resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for STRING_LITERAL resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    $end            reduce using rule 93 (empty -> .)
    CLASS           shift and go to state 14
    FUN             shift and go to state 16
    IMPORT          shift and go to state 18
    PRINT           shift and go to state 25
    RETURN          shift and go to state 30
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    DOUBLE          shift and go to state 33
    STRING          shift and go to state 34
    BOOLEAN         shift and go to state 35
    INTLIST         shift and go to state 36
    FLOATLIST       shift and go to state 37
    STRINGLIST      shift and go to state 38
    DOUBLELIST      shift and go to state 39
    INTARRAY        shift and go to state 40
    FLOATARRAY      shift and go to state 41
    STRINGARRAY     shift and go to state 42
    DOUBLEARRAY     shift and go to state 43
    IDENTIFIER      shift and go to state 44
    IF              shift and go to state 45
    FOR             shift and go to state 46
    WHILE           shift and go to state 47
    SWITCH          shift and go to state 48
    NOT             shift and go to state 49
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 52
    STRING_LITERAL  shift and go to state 19
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54

  ! CLASS           [ reduce using rule 93 (empty -> .) ]
  ! FUN             [ reduce using rule 93 (empty -> .) ]
  ! IMPORT          [ reduce using rule 93 (empty -> .) ]
  ! PRINT           [ reduce using rule 93 (empty -> .) ]
  ! RETURN          [ reduce using rule 93 (empty -> .) ]
  ! INT             [ reduce using rule 93 (empty -> .) ]
  ! FLOAT           [ reduce using rule 93 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 93 (empty -> .) ]
  ! STRING          [ reduce using rule 93 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 93 (empty -> .) ]
  ! INTLIST         [ reduce using rule 93 (empty -> .) ]
  ! FLOATLIST       [ reduce using rule 93 (empty -> .) ]
  ! STRINGLIST      [ reduce using rule 93 (empty -> .) ]
  ! DOUBLELIST      [ reduce using rule 93 (empty -> .) ]
  ! INTARRAY        [ reduce using rule 93 (empty -> .) ]
  ! FLOATARRAY      [ reduce using rule 93 (empty -> .) ]
  ! STRINGARRAY     [ reduce using rule 93 (empty -> .) ]
  ! DOUBLEARRAY     [ reduce using rule 93 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 93 (empty -> .) ]
  ! IF              [ reduce using rule 93 (empty -> .) ]
  ! FOR             [ reduce using rule 93 (empty -> .) ]
  ! WHILE           [ reduce using rule 93 (empty -> .) ]
  ! SWITCH          [ reduce using rule 93 (empty -> .) ]
  ! NOT             [ reduce using rule 93 (empty -> .) ]
  ! LPAREN          [ reduce using rule 93 (empty -> .) ]
  ! NUMBER          [ reduce using rule 93 (empty -> .) ]
  ! STRING_LITERAL  [ reduce using rule 93 (empty -> .) ]
  ! TRUE            [ reduce using rule 93 (empty -> .) ]
  ! FALSE           [ reduce using rule 93 (empty -> .) ]

    program                        shift and go to state 1
    stmt_list                      shift and go to state 2
    stmt                           shift and go to state 3
    empty                          shift and go to state 4
    class_declaration              shift and go to state 5
    fun_declaration                shift and go to state 6
    import_declaration             shift and go to state 7
    assignment                     shift and go to state 8
    variable_declaration           shift and go to state 9
    print_stmt                     shift and go to state 10
    control_structure              shift and go to state 11
    return_stmt                    shift and go to state 12
    function_call                  shift and go to state 13
    identifier                     shift and go to state 15
    general_type                   shift and go to state 20
    expression                     shift and go to state 21
    list_type                      shift and go to state 22
    digit                          shift and go to state 23
    array_type                     shift and go to state 24
    if_stmt                        shift and go to state 26
    for_stmt                       shift and go to state 27
    while_stmt                     shift and go to state 28
    switch_stmt                    shift and go to state 29
    string                         shift and go to state 50
    boolean                        shift and go to state 51

state 1

    (0) S' -> program .



state 2

    (1) program -> stmt_list .

    $end            reduce using rule 1 (program -> stmt_list .)


state 3

    (2) stmt_list -> stmt . stmt_list
    (3) stmt_list -> stmt .
    (2) stmt_list -> . stmt stmt_list
    (3) stmt_list -> . stmt
    (4) stmt_list -> . empty
    (5) stmt -> . class_declaration
    (6) stmt -> . fun_declaration
    (7) stmt -> . import_declaration
    (8) stmt -> . assignment
    (9) stmt -> . variable_declaration
    (10) stmt -> . print_stmt
    (11) stmt -> . control_structure
    (12) stmt -> . return_stmt
    (13) stmt -> . function_call
    (14) stmt -> . empty
    (93) empty -> .
    (15) class_declaration -> . CLASS identifier LBRACE stmt_list RBRACE
    (16) fun_declaration -> . FUN identifier LPAREN params RPAREN LBRACE stmt_list RBRACE
    (20) import_declaration -> . IMPORT STRING_LITERAL
    (24) assignment -> . general_type identifier ASSIGN expression SEMICOLON
    (25) assignment -> . list_type identifier LBRACKET digit RBRACKET ASSIGN expression SEMICOLON
    (26) assignment -> . list_type identifier ASSIGN LBRACKET expression RBRACKET SEMICOLON
    (27) assignment -> . array_type identifier LBRACE digit RBRACE ASSIGN expression SEMICOLON
    (28) assignment -> . array_type identifier ASSIGN LBRACE expression RBRACE SEMICOLON
    (29) assignment -> . identifier ASSIGN expression SEMICOLON
    (21) variable_declaration -> . general_type identifier SEMICOLON
    (22) variable_declaration -> . list_type identifier LBRACKET RBRACKET SEMICOLON
    (23) variable_declaration -> . array_type identifier LBRACE RBRACE SEMICOLON
    (30) print_stmt -> . PRINT LPAREN expression RPAREN SEMICOLON
    (31) control_structure -> . if_stmt
    (32) control_structure -> . for_stmt
    (33) control_structure -> . while_stmt
    (34) control_structure -> . switch_stmt
    (38) return_stmt -> . RETURN expression SEMICOLON
    (35) function_call -> . identifier LPAREN arg_list RPAREN SEMICOLON
    (77) general_type -> . INT
    (78) general_type -> . FLOAT
    (79) general_type -> . DOUBLE
    (80) general_type -> . STRING
    (81) general_type -> . BOOLEAN
    (82) general_type -> . identifier
    (87) list_type -> . INTLIST
    (88) list_type -> . FLOATLIST
    (89) list_type -> . STRINGLIST
    (90) list_type -> . DOUBLELIST
    (83) array_type -> . INTARRAY
    (84) array_type -> . FLOATARRAY
    (85) array_type -> . STRINGARRAY
    (86) array_type -> . DOUBLEARRAY
    (91) identifier -> . IDENTIFIER
    (39) if_stmt -> . IF LPAREN expression RPAREN LBRACE stmt_list RBRACE
    (40) if_stmt -> . IF LPAREN expression RPAREN LBRACE stmt_list RBRACE ELSE LBRACE stmt_list RBRACE
    (41) if_stmt -> . expression QUESTION expression COLON expression SEMICOLON
    (42) for_stmt -> . FOR LPAREN assignment SEMICOLON expression SEMICOLON expression RPAREN LBRACE stmt_list RBRACE
    (43) while_stmt -> . WHILE LPAREN expression RPAREN LBRACE stmt_list RBRACE
    (44) switch_stmt -> . SWITCH LPAREN expression RPAREN LBRACE case_stmts default_stmt RBRACE
    (49) expression -> . expression PLUS expression
    (50) expression -> . expression MINUS expression
    (51) expression -> . expression MULTIPLY expression
    (52) expression -> . expression DIVIDE expression
    (53) expression -> . expression MODULUS expression
    (54) expression -> . expression AND expression
    (55) expression -> . expression OR expression
    (56) expression -> . expression EQUAL expression
    (57) expression -> . expression NOTEQUAL expression
    (58) expression -> . expression LESSTHAN expression
    (59) expression -> . expression GREATERTHAN expression
    (60) expression -> . expression LESSTHANEQUAL expression
    (61) expression -> . expression GREATERTHANEQUAL expression
    (62) expression -> . expression INCREMENT
    (63) expression -> . expression DECREMENT
    (64) expression -> . expression COMMA expression
    (65) expression -> . expression POW expression
    (66) expression -> . NOT expression
    (67) expression -> . LPAREN expression RPAREN
    (68) expression -> . identifier
    (69) expression -> . digit
    (70) expression -> . string
    (71) expression -> . boolean
    (72) expression -> . identifier LBRACKET expression RBRACKET
    (73) expression -> . identifier LBRACE expression RBRACE
    (74) digit -> . NUMBER
    (92) string -> . STRING_LITERAL
    (75) boolean -> . TRUE
    (76) boolean -> . FALSE

  ! reduce/reduce conflict for $end resolved using rule 3 (stmt_list -> stmt .)
  ! reduce/reduce conflict for RBRACE resolved using rule 3 (stmt_list -> stmt .)
  ! reduce/reduce conflict for CASE resolved using rule 3 (stmt_list -> stmt .)
  ! reduce/reduce conflict for DEFAULT resolved using rule 3 (stmt_list -> stmt .)
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for FUN resolved as shift
  ! shift/reduce conflict for IMPORT resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for INTLIST resolved as shift
  ! shift/reduce conflict for FLOATLIST resolved as shift
  ! shift/reduce conflict for STRINGLIST resolved as shift
  ! shift/reduce conflict for DOUBLELIST resolved as shift
  ! shift/reduce conflict for INTARRAY resolved as shift
  ! shift/reduce conflict for FLOATARRAY resolved as shift
  ! shift/reduce conflict for STRINGARRAY resolved as shift
  ! shift/reduce conflict for DOUBLEARRAY resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for STRING_LITERAL resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    $end            reduce using rule 3 (stmt_list -> stmt .)
    RBRACE          reduce using rule 3 (stmt_list -> stmt .)
    CASE            reduce using rule 3 (stmt_list -> stmt .)
    DEFAULT         reduce using rule 3 (stmt_list -> stmt .)
    CLASS           shift and go to state 14
    FUN             shift and go to state 16
    IMPORT          shift and go to state 18
    PRINT           shift and go to state 25
    RETURN          shift and go to state 30
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    DOUBLE          shift and go to state 33
    STRING          shift and go to state 34
    BOOLEAN         shift and go to state 35
    INTLIST         shift and go to state 36
    FLOATLIST       shift and go to state 37
    STRINGLIST      shift and go to state 38
    DOUBLELIST      shift and go to state 39
    INTARRAY        shift and go to state 40
    FLOATARRAY      shift and go to state 41
    STRINGARRAY     shift and go to state 42
    DOUBLEARRAY     shift and go to state 43
    IDENTIFIER      shift and go to state 44
    IF              shift and go to state 45
    FOR             shift and go to state 46
    WHILE           shift and go to state 47
    SWITCH          shift and go to state 48
    NOT             shift and go to state 49
    LPAREN          shift and go to state 17
    NUMBER          shift and go to state 52
    STRING_LITERAL  shift and go to state 19
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54

  ! $end            [ reduce using rule 93 (empty -> .) ]
  ! RBRACE          [ reduce using rule 93 (empty -> .) ]
  ! CASE            [ reduce using rule 93 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 93 (empty -> .) ]
  ! CLASS           [ reduce using rule 93 (empty -> .) ]
  ! FUN             [ reduce using rule 93 (empty -> .) ]
  ! IMPORT          [ reduce using rule 93 (empty -> .) ]
  ! PRINT           [ reduce using rule 93 (empty -> .) ]
  ! RETURN          [ reduce using rule 93 (empty -> .) ]
  ! INT             [ reduce using rule 93 (empty -> .) ]
  ! FLOAT           [ reduce using rule 93 (empty -> .) ]
  ! DOUBLE          [ reduce using rule 93 (empty -> .) ]
  ! STRING          [ reduce using rule 93 (empty -> .) ]
  ! BOOLEAN         [ reduce using rule 93 (empty -> .) ]
  ! INTLIST         [ reduce using rule 93 (empty -> .) ]
  ! FLOATLIST       [ reduce using rule 93 (empty -> .) ]
  ! STRINGLIST      [ reduce using rule 93 (empty -> .) ]
  ! DOUBLELIST      [ reduce using rule 93 (empty -> .) ]
  ! INTARRAY        [ reduce using rule 93 (empty -> .) ]
  ! FLOATARRAY      [ reduce using rule 93 (empty -> .) ]
  ! STRINGARRAY     [ reduce using rule 93 (empty -> .) ]
  ! DOUBLEARRAY     [ reduce using rule 93 (empty -> .) ]
  ! IDENTIFIER      [ reduce using rule 93 (empty -> .) ]
  ! IF              [ reduce using rule 93 (empty -> .) ]
  ! FOR             [ reduce using rule 93 (empty -> .) ]
  ! WHILE           [ reduce using rule 93 (empty -> .) ]
  ! SWITCH          [ reduce using rule 93 (empty -> .) ]
  ! NOT             [ reduce using rule 93 (empty -> .) ]
  ! LPAREN          [ reduce using rule 93 (empty -> .) ]
  ! NUMBER          [ reduce using rule 93 (empty -> .) ]
  ! STRING_LITERAL  [ reduce using rule 93 (empty -> .) ]
  ! TRUE            [ reduce using rule 93 (empty -> .) ]
  ! FALSE           [ reduce using rule 93 (empty -> .) ]

    stmt                           shift and go to state 3
    stmt_list                      shift and go to state 55
    empty                          shift and go to state 4
    class_declaration              shift and go to state 5
    fun_declaration                shift and go to state 6
    import_declaration             shift and go to state 7
    assignment                     shift and go to state 8
    variable_declaration           shift and go to state 9
    print_stmt                     shift and go to state 10
    control_structure              shift and go to state 11
    return_stmt                    shift and go to state 12
    function_call                  shift and go to state 13
    identifier                     shift and go to state 15
    general_type                   shift and go to state 20
    expression                     shift and go to state 21
    list_type                      shift and go to state 22
    digit                          shift and go to state 23
    array_type                     shift and go to state 24
    if_stmt                        shift and go to state 26
    for_stmt                       shift and go to state 27
    while_stmt                     shift and go to state 28
    switch_stmt                    shift and go to state 29
    string                         shift and go to state 50
    boolean                        shift and go to state 51

state 4

    (4) stmt_list -> empty .
    (14) stmt -> empty .

  ! reduce/reduce conflict for $end resolved using rule 4 (stmt_list -> empty .)
  ! reduce/reduce conflict for RBRACE resolved using rule 4 (stmt_list -> empty .)
  ! reduce/reduce conflict for CASE resolved using rule 4 (stmt_list -> empty .)
  ! reduce/reduce conflict for DEFAULT resolved using rule 4 (stmt_list -> empty .)
    $end            reduce using rule 4 (stmt_list -> empty .)
    RBRACE          reduce using rule 4 (stmt_list -> empty .)
    CASE            reduce using rule 4 (stmt_list -> empty .)
    DEFAULT         reduce using rule 4 (stmt_list -> empty .)
    CLASS           reduce using rule 14 (stmt -> empty .)
    FUN             reduce using rule 14 (stmt -> empty .)
    IMPORT          reduce using rule 14 (stmt -> empty .)
    PRINT           reduce using rule 14 (stmt -> empty .)
    RETURN          reduce using rule 14 (stmt -> empty .)
    INT             reduce using rule 14 (stmt -> empty .)
    FLOAT           reduce using rule 14 (stmt -> empty .)
    DOUBLE          reduce using rule 14 (stmt -> empty .)
    STRING          reduce using rule 14 (stmt -> empty .)
    BOOLEAN         reduce using rule 14 (stmt -> empty .)
    INTLIST         reduce using rule 14 (stmt -> empty .)
    FLOATLIST       reduce using rule 14 (stmt -> empty .)
    STRINGLIST      reduce using rule 14 (stmt -> empty .)
    DOUBLELIST      reduce using rule 14 (stmt -> empty .)
    INTARRAY        reduce using rule 14 (stmt -> empty .)
    FLOATARRAY      reduce using rule 14 (stmt -> empty .)
    STRINGARRAY     reduce using rule 14 (stmt -> empty .)
    DOUBLEARRAY     reduce using rule 14 (stmt -> empty .)
    IDENTIFIER      reduce using rule 14 (stmt -> empty .)
    IF              reduce using rule 14 (stmt -> empty .)
    FOR             reduce using rule 14 (stmt -> empty .)
    WHILE           reduce using rule 14 (stmt -> empty .)
    SWITCH          reduce using rule 14 (stmt -> empty .)
    NOT             reduce using rule 14 (stmt -> empty .)
    LPAREN          reduce using rule 14 (stmt -> empty .)
    NUMBER          reduce using rule 14 (stmt -> empty .)
    STRING_LITERAL  reduce using rule 14 (stmt -> empty .)
    TRUE            reduce using rule 14 (stmt -> empty .)
    FALSE           reduce using rule 14 (stmt -> empty .)

  ! $end            [ reduce using rule 14 (stmt -> empty .) ]
  ! RBRACE          [ reduce using rule 14 (stmt -> empty .) ]
  ! CASE            [ reduce using rule 14 (stmt -> empty .) ]
  ! DEFAULT         [ reduce using rule 14 (stmt -> empty .) ]


state 5

    (5) stmt -> class_declaration .
